--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,13 +1,32 @@
  <div class="footer-style">
+ <!-- icon start-->
+ <div class="row" id="icon-background">
+    <div class="col-md-10 col-md-offset-1">
+    <div class="row">
+      <div class="col-md-4">
+        <img src="http://p1.bqimg.com/583835/9b83711b95469010.png"><span>45天退换无忧</span>
+      </div>
+      <div class="col-md-4">
+        <img src="http://p1.bqimg.com/583835/029fb69c354631fb.png"><span>品质保证</span>
+      </div>
+      <div class="col-md-4">
+        <img src="http://p1.bqimg.com/583835/20992670c08948c9.png"><span>72小时闪电发货</span>
+      </div>
+    </div>
+  </div>
+ </div>
+ <!-- icon end -->
  <br>
    <ul class="ul-style">
    	   <li>
-   	          <a href="#">关于我们</a>
-   	          <a href="#">联系我们</a>
+   	          <a href="/shopping_directory">购物指南</a>
+   	          <a href="/contact_us">关于我们</a>
+   	          <a href="/contact_us">联系我们</a>
+   	          <a href="https://github.com/dongmy54/jdstore3">github仓库</a>
    	   </li>
    	   
    </ul>
-	<p >Copyright ©2017 Desgin By 董名晏 和 孙艳</p>
+	<p style="margin-bottom: 5px;">Copyright ©2017 Desgin By 董名晏 和 孙艳</p>
 	     <p class="text-center">ILIFE 商城欢迎您的光临</p>
 </div>
 
