--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,12 +1,12 @@
-<div class="container">
+<div class="container" style="margin-bottom: 100px;">
 	<!-- 上半页	 -->
 	<div class="container spy-body">
 		<div class="row spy-p">
-			     <p>
-	            <span>
+			     <p style="font-size: 14px;">
+	            <span style="color: #483C32;">
 								所有商品陈列
 	            </span>
-	              希望能有您喜欢的，祝您购物愉快
+	              ILIFE爱家、爱生活、爱未来！
 	          </p>
 		</div>
 	</div>
@@ -50,3 +50,4 @@
 	<%= will_paginate(@products,:class => 'sy-pagination',:previous_label => '<',:next_label => '>',renderer: BootstrapPagination::Rails) %>
 </div>
 </div>
+
