--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,276 +1,214 @@
+<div class="whole">
 
-<section class="jk-slider">
-    <div id="carousel-example" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example" data-slide-to="1"></li>
-    <li data-target="#carousel-example" data-slide-to="2"></li>
-  </ol>
-
-  <div class="carousel-inner">
-    <div class="item active">
-      <a href="#"><img src="https://ww2.sinaimg.cn/large/006tNbRwgy1fda392cqvtj31hc0m8qv5.jpg" /></a>
-      	<div class="hero">
-        <hgroup>
-            <h1>爱工作</h1>
-            <h1>也是爱生活</h1>
-            <h3>从工作到生活，你想要的这里都有</h3>
-            <p>WE ARE ILIFER!</p>
-        </hgroup>
-      </div>
-    </div>
-    <div class="item">
-      <a href="#"><img src="https://ww2.sinaimg.cn/large/006tNbRwgy1fcvuyupn66j31hc0m84qq.jpg" /></a>
-      <div class="hero">
-        <hgroup>
-            <h1>享受用餐</h1>
-            <h1>让你活力每一天</h1>
-            <h3>从工作到生活，你想要的这里都有</h3>
-            <p>WE ARE ILIFER!</p>
-        </hgroup>
-
-      </div>
-    </div>
-    <div class="item">
-      <a href="#"><img src="https://ww4.sinaimg.cn/large/006tNbRwgy1fcvw66xzmyj31hc0m8doz.jpg" /></a>
-      <div class="hero">
-        <hgroup>
-            <h1>你的睡眠</h1>
-            <h1>由我来照顾</h1>
-            <h3>从工作到生活，你想要的这里都有 </h3>
-            <p>WE ARE ILIFER!</p>
-        </hgroup>
-
-      </div>
-    </div>
+<!--big picture-->
+<div class="ilife-v2">
+  <div class="ilife-img">
+    <img src="https://ooo.0o0.ooo/2017/03/13/58c6a3bf84121.jpg"/ >
   </div>
-
-  <a class="left carousel-control" href="#carousel-example" data-slide="prev" style="color:#ed4c1c;">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example" data-slide="next" style="color:#ed4c1c;">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-  </a>
-</div>
-
-</section>
-
-<!-- part1 -->
-  <style>
-  .welcome-container1 {
-      padding: 50px 120px;
-  }
-  .welcome-container2 {
-      padding: 0px 120px;
-  }
-  </style>
-
-<div class="welcome-container1 text-center">
-  <h1 style="font-size: 50px; color:#ed4c1c">新品上市</h1>
-  <p>优惠多多</p>
-  <p>我们永远站在时尚前沿，只为向你提供更好的生活</p>
-  <hr style="height:3px;border:none;border-top:3px;background-color:#ed4c1c" />
-  <div class="row">
-    <div class="col-sm-4 sy">
-      <a href="https://infinite-atoll-59672.herokuapp.com/products/9">
-		    <img src="https://ooo.0o0.ooo/2017/02/19/58a950d26e80c.jpg" alt="Random Name" width="255" height="255" >
-		  </a>
-      <a href="https://infinite-atoll-59672.herokuapp.com/products/9">
-      <p><strong>时尚风格单人床 ￥ 1899</strong></p><br></a>
-    </div>
-    <div class="col-sm-4 sy">
-      <a href="https://infinite-atoll-59672.herokuapp.com/products/12">
-		    <img src="https://ooo.0o0.ooo/2017/02/19/58a9623dd8e51.jpg" alt="Random Name" width="255" height="255" >
-		  </a>
-      <a href="https://infinite-atoll-59672.herokuapp.com/products/12">
-      <p><strong>时尚风格单人床 ￥ 1899</strong></p><br></a>
-    </div>
-    <div class="col-sm-4 sy">
-      <a href="https://infinite-atoll-59672.herokuapp.com/products/13">
-		    <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/71/medium_1.jpg" alt="Random Name" width="255" height="255" >
-		  </a>
-      <a href="https://infinite-atoll-59672.herokuapp.com/products/13">
-      <p><strong>时尚风格单人床 ￥ 1899</strong></p><br></a>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-4 sy">
-      <a href="https://infinite-atoll-59672.herokuapp.com/products/8">
-		    <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/46/medium_11.jpg" alt="Random Name" width="255" height="255" >
-		  </a>
-      <a href="https://infinite-atoll-59672.herokuapp.com/products/8">
-      <p><strong>时尚风格单人床 ￥ 1899</strong></p><br></a>
-    </div>
-    <div class="col-sm-4 sy">
-      <a href="https://infinite-atoll-59672.herokuapp.com/products/10">
-		    <img src="https://ooo.0o0.ooo/2017/02/19/58a950d3b39d5.jpg" alt="Random Name" width="255" height="255" >
-		  </a>
-      <a href="https://infinite-atoll-59672.herokuapp.com/products/10">
-      <p><strong>时尚风格单人床 ￥ 1899</strong></p><br></a>
-    </div>
-    <div class="col-sm-4 sy">
-      <a href="https://infinite-atoll-59672.herokuapp.com/products/11">
-		    <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/61/medium_1.jpg" alt="Random Name" width="255" height="255" >
-		  </a>
-      <a href="https://infinite-atoll-59672.herokuapp.com/products/11">
-      <p><strong>时尚风格单人床 ￥ 1899</strong></p><br></a>
-    </div>
+  <div class="dream">
+        还您一个<span class="dream-span"> 温馨、舒适、自由</span>空间
+        <%= link_to("还没注册", new_user_registration_path,
+        class: "btn btn-default btn-lg") %>
   </div>
 </div>
 
- <!-- part1 over -->
 
-<!-- part2 -->
-<div class="bg-1">
-  <div class="welcome-container2">
-    <h1 class="text-center">店主推荐</h1>
-    <p class="text-center" style="color:#333333">诚意满满<br> 品味由心而生，你值得更好的生活 </p>
-    <hr style="height:3px;border:none;border-top:3px;background-color:#ed4c1c" />
+
+
+<!-- introduction end -->
+<div class="introduction">
+<div class="row">
+<div class="col-md-10 col-md-offset-1">
+<div class="row">
+<span class="intr-text-1">补充线</span>
+<span class="intr-text">我们可以</span>
+<span class="intr-text-1">补充线</span>
+<br>
+<br>
+    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+    <img src="https://ooo.0o0.ooo/2017/03/12/58c53975f114f.jpg">
+    <div class="introduction-text">
+     <h4 class="introduction-h-font">100%环保健康</h4>
+    <p class="introduction-font-color">
+     ILIFE拥有世界最先进的材料检测技术，四重检测机制：选材检验、来料检验、生产检验、出厂检验。层层把关，确保产品从原料购进到出厂所有环节实现零污染、零添加。
+    </p>
+    </div>
+    </div>
+
+     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 introduction-font-color">
+     <img src="https://ooo.0o0.ooo/2017/03/14/58c75de9d82a3.jpg">
+     <div class="introduction-text">
+     <h4 class="introduction-h-font">个性化定制服务</h4>
+    <p class="introduction-font-color">风格可选、配色可换，<br>无论什么户型、想要什么效果，ILIFE的设计师总能为您量身打造全新的居住空间。</p>
+    </div>
+    </div>
+
+    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+      <img src="https://ooo.0o0.ooo/2017/03/14/58c7578c300aa.jpg">
+      <div class="introduction-text">
+     <h4 class="introduction-h-font">72小时闪电到货</h4>
+    <p class="introduction-font-color">
+      ILIFE的线下仓库覆盖全国大、中、小城市，至收到您订单起我们以单位小时计算到货速度，快速发货的同时，为您提供包物流、包送货、包安装的三包服务，真正让您省心、省力。
+    </p>
+    </div>
+    </div>
+  </div>
+  </div>
+  </div>
+ </div>
+  
+<!-- different space-->
+<div class="row" style="margin-bottom: 20px;">
+<div class="col-md-10 col-md-offset-1">
+<div class="row">
+  <div class="col-md-8">
+    <img src="https://ooo.0o0.ooo/2017/03/14/58c7790a85455.jpg" style="width: 100%;height: 100%;border-radius: 37px;">
+    </div>
+
+    <div class="col-md-4" style="margin-top: 15%;color: #483C32;">
+     <div style="font-size: 28px;text-align: center;">客厅</div>
+
+     <div style="font-size: 20px;">职场之路如履薄冰，回家卸去一身疲惫。</div> 
+    </div>
+  </div>
+</div>
+</div>
+
+<div class="row" style="margin-bottom: 20px;">
+<div class="col-md-10 col-md-offset-1">
+<div class="row">
+  
+
+    <div class="col-md-4" style="margin-top: 15%;color: #483C32;">
+     <div style="font-size: 28px;text-align: center;">餐厅</div>
+
+     <div style="font-size: 20px;">许你一世承诺，我想给你一个家，一起柴米油盐、一起细水长流。</div> 
+    </div>
+
+    <div class="col-md-8">
+    <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1489476761828&di=75aba4ef7cf6c160d806db9b5e36e24c&imgtype=0&src=http%3A%2F%2Fpic.58pic.com%2F58pic%2F14%2F59%2F71%2F14u58PICinz_1024.jpg" style="width: 100%;height: 100%;border-radius: 37px;">
+    </div>
+
+  </div>
+</div>
+</div>
+
+<div class="row">
+<div class="col-md-10 col-md-offset-1">
+<div class="row">
+  <div class="col-md-8">
+    <img src="https://ooo.0o0.ooo/2017/03/14/58c77693eb3da.jpg" style="width: 100%;height: 100%;border-radius: 37px;">
+    </div>
+
+    <div class="col-md-4" style="margin-top: 15%;color: #483C32;">
+     <div style="font-size: 28px;text-align: center;">卧室</div>
+
+     <div style="font-size: 20px;">你说羡慕命中注定的爱情，而我早已把你当作我的不二之选。</div> 
+    </div>
+  </div>
+</div>
+</div>
+
+<!-- different space end-->
+
+
+
+
+<!-- introduction end -->
+
+<!-- customer feedback -->
+<div id="customer-feedback" class="row">
+  <div class="module-name decorative">
+    <span>顾客反馈</span>
+  </div>
+
+  <div class="col-md-10 col-md-offset-1">
     <div class="row">
-      <div class="row featurette">
-        <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading"><strong>三座沙龙式精致沙发</strong></h2>
-          <h2 style="color:#ed4c1c">￥2400</h2>
-          <p class="lead sy" style="color:#333333">现代时尚,彰显个性；工艺考究，注重细节。<br>
-            您喜欢与家人、朋友一起，在美好的周末时光，窝在家中一角，<br>
-            谈天说地，畅想开怀，<br>
-            专心致志谈论过去、现在、将来吗？<br>
-            那么如何建立这样一个如此重要的畅谈区?<br>
-            这款沙发，为家开辟专属聊天角，带给您层次化的居家沙龙。
+      <div class="col-md-4 ">
+        <div class="fd-avatar-box text-center">
+          <div class="fd-avatar-box-color-overlay"></div>
+          <img src="http://img3.imgtn.bdimg.com/it/u=1624654914,921462327&fm=11&gp=0.jpg" class="round-image-74">
+        </div>
+
+        <div class="quote-box-1">
+          <p><i class="fa fa-quote-left pull-left" aria-hidden="true"></i></p><br>
+          <p class="feedback-info text-center">
+            我是一个平时比较懒的人，最怕的事就是麻烦。<br>
+            原本以为本次买家具各种选购会很累，但让我万万没想到的是，<br>全屋定制方案简直一步到位，<br>
+          而且整体风格也很棒～，最轻松的一次购物！
           </p>
+          <p class="feedback-info text-center" style="font-size:16px;">
+            - 爱笑的丫头
+          </p>
+          <p><i class="fa fa-quote-right pull-right" aria-hidden="true"></i></p>
         </div>
-        <div class="col-md-5 col-md-pull-7">
-          <a href="https://infinite-atoll-59672.herokuapp.com/products/4">
-            <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="500x500" src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/41/medium_shafa1.jpg" data-holder-rendered="true"></a>
+     </div>
+
+      <div class="col-md-4">
+        <div class="fd-avatar-box text-center">
+          <div class="fd-avatar-box-color-overlay"></div>
+          <img src="http://img4.imgtn.bdimg.com/it/u=2256468309,3478539869&fm=23&gp=0.jpg" class="round-image-74">
+        </div>
+
+        <div class="quote-box-1">
+          <p><i class="fa fa-quote-left pull-left" aria-hidden="true"></i></p><br>
+          <p class="feedback-info text-center">
+            由于工作关系我经常出差在外，老婆每次让我装饰新居，<br>
+            我都各种推脱，其中原因是我真的没有那么多时间，<br>而这次借公司放假之际，我联系了ILIFE的客服，没想到从开始联系到安装完毕，三天就搞定了，🚀速度～
+            <br>
+          </p>
+          <p class="feedback-info text-center" style="font-size:16px;">
+            - 都市文艺青年
+          </p>
+
+          <p><i class="fa fa-quote-right pull-right" aria-hidden="true"></i></p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="fd-avatar-box text-center">
+          <div class="fd-avatar-box-color-overlay"></div>
+          <img src="http://img1.imgtn.bdimg.com/it/u=207928594,767718927&fm=23&gp=0.jpg" class="round-image-74">
+        </div>
+
+        <div class="quote-box-1">
+          <p><i class="fa fa-quote-left pull-left" aria-hidden="true"></i></p><br>
+          <p class="feedback-info text-center">
+            家里有个5岁的小朋友，所以选购家具最担心的无非是，<br>材质不健康、有较大的气味。由于对家具不了解，所以在材料<br>问题上犹豫了很久，在朋友的强烈推荐下，选择了<br>ILIFE，让我意外的是没有半点气味，当天即可入住。
+            
+          </p>
+          <p class="feedback-info text-center" style="font-size:16px;">
+            - 外企高管
+          </p>
+          <p><i class="fa fa-quote-right pull-right" aria-hidden="true"></i></p>
         </div>
       </div>
     </div>
-
   </div>
-  <!-- part2-1-->
-  <br>
-  <div class="container">
-          <div class="row">
-              <div class="span12">
-                  <div class="well">
-                      <div id="myCarousel" class="carousel fdi-Carousel slide">
-                       <!-- Carousel items -->
-                          <div class="carousel fdi-Carousel slide" id="eventCarousel" data-interval="0">
-                              <div class="carousel-inner onebyone-carosel">
-                                  <div class="item active">
-                                      <div class="col-md-4">
-                                          <a href="https://infinite-atoll-59672.herokuapp.com/products/7">
-                                            <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/31/medium_%E5%BA%8A1.jpg" class="img-responsive center-block"></a>
-                                          <div class="text-center">双人舒适大床 ￥2800</div>
-                                      </div>
-                                  </div>
-                                  <div class="item">
-                                      <div class="col-md-4">
-                                          <a href="https://infinite-atoll-59672.herokuapp.com/products/6">
-                                            <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/26/medium_%E6%A9%B1%E6%9F%9C1.jpg" class="img-responsive center-block"></a>
-                                          <div class="text-center">古典风格耐用橱柜 ￥1500</div>
-                                      </div>
-                                  </div>
-                                  <div class="item">
-                                      <div class="col-md-4">
-                                          <a href="https://infinite-atoll-59672.herokuapp.com/products/5">
-                                            <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/21/medium_%E9%A4%90%E6%A1%8C1.jpg" class="img-responsive center-block"></a>
-                                          <div class="text-center">居家简单实用餐桌 ￥3200</div>
-                                      </div>
-                                  </div>
-                                  <div class="item">
-                                      <div class="col-md-4">
-                                          <a href="https://infinite-atoll-59672.herokuapp.com/products/3">
-                                            <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/6/medium_%E5%8A%9E%E5%85%AC%E6%A1%8C1.jpg" class="img-responsive center-block"></a>
-                                          <div class="text-center">简洁美观电脑桌 ￥1300 </div>
-                                      </div>
-                                  </div>
-                                  <div class="item">
-                                      <div class="col-md-4">
-                                          <a href="https://infinite-atoll-59672.herokuapp.com/products/4">
-                                            <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/41/medium_shafa1.jpg" class="img-responsive center-block"></a>
-                                          <div class="text-center">三座沙龙式精致沙发 ￥2400</div>
-                                      </div>
-                                  </div>
-                                  <div class="item">
-                                      <div class="col-md-4">
-                                          <a href="https://infinite-atoll-59672.herokuapp.com/products/1">
-                                            <img src="https://fullstack01.s3.amazonaws.com/uploads/photo/image/11/medium_%E6%A4%85%E5%AD%901.jpg" class="img-responsive center-block"></a>
-                                          <div class="text-center">360度旋转椅 ￥888</div>
-                                      </div>
-                                  </div>
-                              </div>
-                              <a class="left carousel-control" href="#eventCarousel" data-slide="prev">
-                                <span class="glyphicon glyphicon-chevron-left"></span>
-                              </a>
-                              <a class="right carousel-control" href="#eventCarousel" data-slide="next">
-                                <span class="glyphicon glyphicon-chevron-right"></span>
-                              </a>
-                          </div>
-                          <!--/carousel-inner-->
-                      </div><!--/myCarousel-->
-                  </div><!--/well-->
-              </div>
-          </div>
-      </div>
-<script>
-      $(document).ready(function () {
-    $('#myCarousel').carousel({
-        interval: 10000
-    })
-    $('.fdi-Carousel .item').each(function () {
-        var next = $(this).next();
-        if (!next.length) {
-            next = $(this).siblings(':first');
-        }
-        next.children(':first-child').clone().appendTo($(this));
 
-        if (next.next().length > 0) {
-            next.next().children(':first-child').clone().appendTo($(this));
-        }
-        else {
-            $(this).siblings(':first').children(':first-child').clone().appendTo($(this));
-        }
-    });
-});
-</script>
-  <!-- part2-1 over -->
 </div>
-<!-- part2 over -->
 
-<!-- part3 -->
-<div class="container">
-	<div class="row">
-	      <br>
-	      <div class="know-you">
-		    关于ILIFE
-        ️</div>
-	</div>
-    <hr>
-    <div class="container-fluid text-center">
-      <br>
-      <div class="row">
-        <div class="col-sm-3">
-          <span class="glyphicon glyphicon-grain logo-small"></span>
-          <h4>健康</h4>
-          <p>每一种材料都精挑细选<br>因为我们比您更在乎您和您家人的健康</p>
-        </div>
-        <div class="col-sm-3">
-          <span class="glyphicon glyphicon-refresh logo-small"></span>
-          <h4>简单</h4>
-          <p>整体布局方案<br>帮您节约宝贵的时间，品味和时间一个都不落下</p>
-        </div>
-        <div class="col-sm-3">
-          <span class="glyphicon glyphicon-upload logo-small"></span>
-          <h4>升级</h4>
-          <p>未曾停下脚步<br>向您交付最好的产品和设计是我们永远的追求</p>
-        </div>
-        <div class="col-sm-3">
-          <span class="glyphicon glyphicon-globe logo-small"></span>
-          <h4>服务</h4>
-          <p>天涯海角<br>您在哪里我们的服务就将陪伴你到哪里</p>
-        </div>
-      </div>
-    </div>
+
+
+<!-- call-to-action -->
+
+<div id="call-to-action" class="row">
+  <div class="text-center">
+    <p>默默的等待，只为给您一个温暖的家！</p>
+    <br>
+    <%= link_to("我去逛逛 <i class='fa fa-arrow-right'></i>".html_safe, products_path, class: "btn btn-default btn-lg") %>
+  </div>
 </div>
-<!-- part3 over -->
+<!-- end of call-to-action -->
+
+
+   
+<%= render "common/footer" %>
+</div><!--modify margin-left and margin-right style -->
+
+
+
+
+
+
+
+
