--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -2,11 +2,16 @@
   <div class="navbar-container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="/"><img src="https://ww3.sinaimg.cn/large/006tNbRwgy1fd1xsusgp5j301h014q2s.jpg"></a>
+     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-megadropdown-tabs">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="/"><img src="http://shababsa7.net/images/PageImage-515435-3918738-home_icon.png" class="home-icon"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="navbar-collapse style= collapse in" id="bs-megadropdown-tabs" style="padding-left: 0px;">
+    <div class="collapse navbar-collapse" id="bs-megadropdown-tabs" style="padding-left: 0px;">
         <ul class="nav navbar-nav">
 						<li>
 		            <%= link_to products_path do %>
@@ -40,7 +45,7 @@
 		<div class="nav navbar-nav navbar-left">
       <%= form_tag search_products_path , :method => :get  do %>
       <div class="input-group" id="search-id" >
-        <input type="text" class="form-control" name="q" value="<%= params[:q] %>" placeholder="请输入商品信息">
+        <input type="text" class="form-control" name="q" value="<%= params[:q] %>" placeholder="请输入商品名称">
       <div class="input-group-btn">
           <button class="btn btn-default" type="submit">
             <i class="glyphicon glyphicon-search"></i>
@@ -64,7 +69,7 @@
 	         </li>
 					 <% if !current_user %>
               <li><%= link_to("注册", new_user_registration_path) %> </li>
-              <li><%= link_to(content_tag(:i, '登入', class: 'fa fa-sign-in'), new_user_session_path) %></li>
+              <li><%= link_to(content_tag(:i, '登录', class: 'fa fa-sign-in'), new_user_session_path) %></li>
               <% else %>
               <li class="dropdown">
                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Hi!, <%= current_user.email %>
@@ -79,16 +84,14 @@
                  <li>
                    <%= link_to("个人订单列表", account_orders_path) %>
                  </li>
-                    <li> <%= link_to(content_tag(:i, '登出', class: 'fa fa-sign-out'), destroy_user_session_path, method: :delete) %> </li>
+                    <li> <%= link_to(content_tag(:i, '退出', class: 'fa fa-sign-out'), destroy_user_session_path, method: :delete) %> </li>
                  </ul>
               </li>
             <% end %>
+            </ul>
 
-					 </div>
-				</li>
-			</ul>
-            </li>
-        </ul>
+
+				
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
