--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="margin-bottom: 100px;">
 <div class="row">
 	<div class="col-md-6">
 		<% if @product.photos.present? %>
