--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -169,7 +169,7 @@ background-color:red !important;
 	    </div>
 
 	    <div class="product-controller">
-     	      <%= link_to cart_item_path(cart_item.product_id), method: :delete do %>
+     	      <%= link_to cart_item_path(cart_item), method: :delete do %>
               <i class="btn btn-primary fa fa-trash fa-1.5x" ></i>
               <% end %>
         </div>
