--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,202 +1,81 @@
-<style media="screen">
-.c-color-1 {
-	background-color: #72632a;  /*黑浅*/
-}
-
-.c-color-2 {
-	background-color: #FFFFF0;  /*白深*/
-}
-
-.c-color-3 {
-	background-color: #483C32;  /*黑深*/
-}
-
-.c-color-4 {
-	background-color: #FFFDD0;  /*黑深*/
-
-}
-
-.carts {
-	height: 50px;
-	text-align: center;
-	border: 1px solid #e8e8e8;
-	font-weight: 200px;
-	font-size: 16px;	
-}
-
-.label-image {
-	width: 32%;
-	line-height: 45px;
-	display: inline-block;
-
-}
-
-.label-price,.label-controller,.label-quantity,.label-subtotal {
-	width: 16%;
-	line-height: 50px;
-	display: inline-block;
-}
-
-
-.product {
-	height: 220px;
-	text-align: center;
-	margin-top: 10px;
-	border: 1px solid #e8e8e8;
-	margin-top: 20px;
-}
-
-.product-image {
-	width: 16%;
-	display: inline-block;
-}
-
-.product-image img {
-		margin-top: 5px;
-    max-width: 100%;
-    height: auto;
-    width: auto\9; /* ie8 */
-    display: inline-block;
-
-}
-
-.product-description {
-	width: 16%;
-	display: inline-block;
-}
-
-.product-price {
-	width: 16%;
-	display: inline-block;
-	line-height: 210px;
-}
-
-.product-quantity {
-	width: 16%;
-	display: inline-block;
-}
-
-.product-subtotal {
-    width: 16%;
-	display: inline-block;
-
-}
-.product-controller {
-	width: 16%;
-	display: inline-block;
-}
-
-.empty-carts {
-		 margin-top: 20px;
-		 margin-bottom: 300px;
-
-}
-
-.empty-carts-img{
-	 
-	 display: inline-block;;
-}
-
-.empty-carts-img img {
-	 width: 250px; 
-	 height: 250px;
-	 border-radius: 50px;
-	 /*display: inline-block;;*/
-}
-
-.empty-carts-text {
-    font-size: 25px;
-    color: #2a424b;
-	display: inline-block;
-}
-
-.btn-primary {
-color: #fff;
-background-color: #483C32;
-border-color: #483C32;
-}
-
-.btn-danger {
-color: #fff;
-background-color: #ea4a1c;
-border-color: #dc4022;
-}
-
-.checkout-carts .btn:hover
-{
-background-color:red !important;
-}  
-</style>
 
 <div class="container">
-
  <h3 ><a href="products" style="color: #483C32;">ILIFI商城</a></h3>
- <% if current_cart.cart_items.present? %>
-
-
+ 
+<% if current_cart.cart_items.present? %>    
+                                    <!-- 如果购物车存在商品 -->
 	<div class="carts c-color-4">
-	       <div class="label-image"> 商品信息</div>
-	       <div class="label-price">单价</div>
-	       <div class="label-quantity">数量</div>
-	       <div class="label-subtotal">小计(元）</div>
-	       <div class="label-controller">操作</div>
-   </div>
-    <% current_cart.cart_items.each do |cart_item| %>
+     <div class="label-image"> 商品信息</div>
+     <div class="label-price">单价</div>
+     <div class="label-quantity">数量</div>
+     <div class="label-subtotal">小计(元）</div>
+     <div class="label-controller">操作</div>
+  </div>
+  
+	<% @cart_items.each do |cart_item| %>
 
-   <div class="product c-color-2">
+   	<div class="product c-color-2">
+	    
 	    <div class="product-image">
-	         <% if cart_item.product.photos.present? %>
-
-		              <%= link_to product_path(cart_item.product_id) do %>
-    			      <%= image_tag(cart_item.product.photos[0].image.thumb.url) %>     
-                      <% end %>
-             <% else %>
-                      <%= image_tag("http://placehold.it/400x400&text=No Pic") %>
-             <% end %>
+	      <% if cart_item.product.photos.present? %>
+          <%= link_to product_path(cart_item.product_id) do %>
+		      	<%= image_tag(cart_item.product.photos[0].image.thumb.url) %>     
+          <% end %>
+        <% else %>
+          <%= image_tag("http://placehold.it/400x400&text=No Pic") %>
+        <% end %>
        </div>
 
-	    <div class="product-description"><%= link_to(cart_item.product.description, product_path(cart_item.product_id) )%></div>
+	    <div class="product-description">
+	    	<%= link_to(cart_item.product.description, product_path(cart_item.product_id) )%>
+	    </div>
+
 	    <div class="product-price">
-	       	<%= cart_item.product.price %> </div>
+	      <%= cart_item.product.price %> 
+	    </div>
 	    
 	    <div class="product-quantity countNumber">
-             <%= link_to("-", remove_quantity_cart_item_path(cart_item.product), class: "countNumber-btn countNumber-btn-sub", method: :post) %>
-             <input class="countNumber-input" type="text" value="<%= cart_item.quantity %>">
-             <%= link_to("+", add_quantity_cart_item_path(cart_item.product_id), class: "countNumber-btn countNumber-btn-plus", method: :post) %>
-	                   </div>  
+        <%= link_to("-", remove_quantity_cart_item_path(cart_item.product), class: "countNumber-btn countNumber-btn-sub", method: :post) %>
+        <input class="countNumber-input" type="text" value="<%= cart_item.quantity %>">
+        <%= link_to("+", add_quantity_cart_item_path(cart_item.product_id), class: "countNumber-btn countNumber-btn-plus", method: :post) %>
+	    </div>  
+
 	    <div class="product-subtotal">
-	    	 <span style="color: red"><%= cart_item.product.price * cart_item.quantity %></span>
+	    	<span style="color: red"><%= cart_item.product.price * cart_item.quantity %></span>
 	    </div>
 
 	    <div class="product-controller">
-     	      <%= link_to cart_item_path(cart_item.product_id), method: :delete do %>
-              <i class="btn btn-primary fa fa-trash fa-1.5x" ></i>
-              <% end %>
-        </div>
-   </div>
-              <% end %>
+     	  <%= link_to cart_item_path(cart_item.product_id), method: :delete do %>
+          <i class="btn btn-primary fa fa-trash fa-1.5x" ></i>
+        <% end %>
+      </div>
+    
+    </div>
+  <% end %>
 
 	    <div class="total clearfix">
-			   <span class="pull-right" style="margin-top: 20px; font-size: 16px;">
-				
-				总计: <span style="color: red;">  <%= render_cart_total_price(current_cart) %> </span>RMB
+			  <span class="pull-right" style="margin-top: 20px; font-size: 16px;">
+				总计: 	<span style="color: red;">
+								<%= render_cart_total_price(current_cart) %> 
+							</span> RMB
 				</span>
-		</div>
+			</div>
 
-		<div class="checkout-carts">
-           <%= link_to "确认结账", checkout_carts_path,  {:style=>'color:#FFFFFF;margin-top:20px;', :class => "btn btn-danger btn-lg pull-right",:method => :post,} %>
-		</div>
-             <% else %> 
+			<div class="checkout-carts">
+        <%= link_to "确认结账", checkout_carts_path,  {:style=>'color:#FFFFFF;margin-top:20px;', :class => "btn btn-danger btn-lg pull-right",:method => :post,} %>
+			</div>
+             
+<% else %> <!-- 如果购物车不存在商品 -->
 
-	        <div class="empty-carts">
-                <div class="empty-carts-img">
-                   <img src="https://ooo.0o0.ooo/2017/03/04/58ba58b24f5f1.jpg" / >
-               </div>
-               <div class="empty-carts-text">
-               亲，你的购物车还是空的，<a href="products">去逛逛吧～</a>
-               </div>
-            </div>
+  <div class="empty-carts">
+    <div class="empty-carts-img">
+      <img src="https://ooo.0o0.ooo/2017/03/04/58ba58b24f5f1.jpg" / >
+    </div>
+    <div class="empty-carts-text">
+      亲，你的购物车还是空的，<a href="products">去逛逛吧～</a>
+    </div>
+  </div>
 
 
-	       <% end %>
+<% end %>
 </div>
